[gd_scene load_steps=17 format=3 uid="uid://d1tna8hbxoer3"]

[ext_resource type="Script" path="res://scripts/ui/MilestoneScreen.gd" id="1_a1kr2"]
[ext_resource type="Texture2D" uid="uid://b7xykwtklhj0a" path="res://assets/ui/ability/light_laser.png" id="2_v5vf4"]
[ext_resource type="Texture2D" uid="uid://cjyi0kquyeaj2" path="res://assets/ui/ability/outline.png" id="3_hu8cm"]
[ext_resource type="Texture2D" uid="uid://bqn1p5ntp0wjc" path="res://assets/ui/ability/light_radiance.png" id="4_srwlq"]
[ext_resource type="Texture2D" uid="uid://blybg26hcd5n" path="res://assets/ui/ability/light_orb.png" id="5_2sc36"]
[ext_resource type="Texture2D" uid="uid://dm06cg6eylhll" path="res://assets/ui/ability/dark_malady.png" id="6_t7pxs"]
[ext_resource type="Texture2D" uid="uid://bk61oqfe7bmf7" path="res://assets/ui/ability/dark_assassin.png" id="7_e7tub"]
[ext_resource type="Texture2D" uid="uid://cl20ugbml10ku" path="res://assets/ui/ability/dark_bomb.png" id="8_i1hfc"]
[ext_resource type="Texture2D" uid="uid://7dq5c36o50fg" path="res://assets/ui/base_button_3_medium.png" id="9_qrd8q"]
[ext_resource type="Texture2D" uid="uid://dykbw1bykwex0" path="res://assets/ui/base_button_3_medium_hover.png" id="10_4sdkl"]
[ext_resource type="Texture2D" uid="uid://bnr7s1rt4prm7" path="res://assets/ui/base_container_2.png" id="11_nxawr"]
[ext_resource type="FontFile" uid="uid://c7thntxb1otbu" path="res://misc/ThaleahFat.ttf" id="11_tk6ux"]
[ext_resource type="Texture2D" uid="uid://bk3vax5asmj7a" path="res://assets/ui/icon_restart.png" id="13_4jxon"]
[ext_resource type="FontFile" uid="uid://dw61yhdajfgpj" path="res://misc/NicoClean-Regular.ttf" id="15_k2f8f"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4xjck"]

[sub_resource type="Theme" id="Theme_mkji8"]
TooltipPanel/styles/panel = SubResource("StyleBoxEmpty_4xjck")

[node name="Milestone" type="Control"]
process_mode = 3
visibility_layer = 4
z_index = 5
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a1kr2")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_right = 148.0
offset_bottom = 180.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Light" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Laser" type="TextureButton" parent="CenterContainer/VBoxContainer/Light"]
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("2_v5vf4")

[node name="Outline" type="TextureRect" parent="CenterContainer/VBoxContainer/Light/Laser"]
visible = false
layout_mode = 0
offset_left = -1.0
offset_top = -1.0
offset_right = 25.0
offset_bottom = 25.0
texture = ExtResource("3_hu8cm")

[node name="Radiance" type="TextureButton" parent="CenterContainer/VBoxContainer/Light"]
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("4_srwlq")

[node name="Outline" type="TextureRect" parent="CenterContainer/VBoxContainer/Light/Radiance"]
visible = false
layout_mode = 0
offset_left = -1.0
offset_top = -1.0
offset_right = 25.0
offset_bottom = 25.0
texture = ExtResource("3_hu8cm")

[node name="Orb" type="TextureButton" parent="CenterContainer/VBoxContainer/Light"]
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("5_2sc36")

[node name="Outline" type="TextureRect" parent="CenterContainer/VBoxContainer/Light/Orb"]
visible = false
layout_mode = 0
offset_left = -1.0
offset_top = -1.0
offset_right = 25.0
offset_bottom = 25.0
texture = ExtResource("3_hu8cm")

[node name="Dark" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Malady" type="TextureButton" parent="CenterContainer/VBoxContainer/Dark"]
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("6_t7pxs")

[node name="Outline" type="TextureRect" parent="CenterContainer/VBoxContainer/Dark/Malady"]
visible = false
layout_mode = 0
offset_left = -1.0
offset_top = -1.0
offset_right = 25.0
offset_bottom = 25.0
texture = ExtResource("3_hu8cm")

[node name="Assassin" type="TextureButton" parent="CenterContainer/VBoxContainer/Dark"]
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("7_e7tub")

[node name="Outline" type="TextureRect" parent="CenterContainer/VBoxContainer/Dark/Assassin"]
visible = false
layout_mode = 0
offset_left = -1.0
offset_top = -1.0
offset_right = 25.0
offset_bottom = 25.0
texture = ExtResource("3_hu8cm")

[node name="Bomb" type="TextureButton" parent="CenterContainer/VBoxContainer/Dark"]
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("8_i1hfc")

[node name="Outline" type="TextureRect" parent="CenterContainer/VBoxContainer/Dark/Bomb"]
visible = false
layout_mode = 0
offset_left = -1.0
offset_top = -1.0
offset_right = 25.0
offset_bottom = 25.0
texture = ExtResource("3_hu8cm")

[node name="Start" type="TextureButton" parent="CenterContainer/VBoxContainer"]
modulate = Color(0.588235, 0.588235, 0.588235, 0.537255)
layout_mode = 2
mouse_default_cursor_shape = 2
disabled = true
texture_normal = ExtResource("9_qrd8q")
texture_hover = ExtResource("10_4sdkl")

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/Start"]
layout_mode = 0
offset_left = 4.0
offset_top = 6.0
offset_right = 76.0
offset_bottom = 29.0
theme_override_colors/font_color = Color(1, 0.92549, 0.839216, 1)
theme_override_fonts/font = ExtResource("11_tk6ux")
text = "RESUME"
horizontal_alignment = 1

[node name="Background" type="TextureRect" parent="CenterContainer"]
z_index = -1
layout_mode = 2
mouse_filter = 2
texture = ExtResource("11_nxawr")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Reset" type="TextureButton" parent="Control"]
layout_mode = 0
offset_left = 120.0
offset_top = 52.0
offset_right = 156.0
offset_bottom = 89.0
scale = Vector2(0.5, 0.5)
mouse_default_cursor_shape = 2
theme = SubResource("Theme_mkji8")
texture_normal = ExtResource("13_4jxon")
stretch_mode = 3

[node name="Tip" type="Label" parent="Control"]
layout_mode = 0
offset_left = 24.0
offset_top = 24.0
offset_right = 136.0
offset_bottom = 49.0
theme_override_colors/font_color = Color(0.862745, 0.74902, 0.647059, 1)
theme_override_constants/line_spacing = -1
theme_override_fonts/font = ExtResource("15_k2f8f")
theme_override_font_sizes/font_size = 5
text = "Choose a new ability. Your selection will replace your currently existing one on its respective domain (light or dark)."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="MilestoneLabel" type="Label" parent="Control"]
layout_mode = 0
offset_left = 24.0
offset_top = -2.0
offset_right = 136.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0.862745, 0.74902, 0.647059, 1)
theme_override_constants/line_spacing = -1
theme_override_fonts/font = ExtResource("11_tk6ux")
theme_override_font_sizes/font_size = 6
text = "MILESTONE REACHED"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Information" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Container" type="TextureRect" parent="Information"]
layout_mode = 0
offset_left = 152.0
offset_right = 312.0
offset_bottom = 180.0
texture = ExtResource("11_nxawr")

[node name="Text" type="RichTextLabel" parent="Information/Container"]
layout_mode = 0
offset_left = 28.0
offset_top = 44.0
offset_right = 132.0
offset_bottom = 148.0
theme_override_colors/default_color = Color(0.74902, 0.564706, 0.603922, 1)
theme_override_fonts/normal_font = ExtResource("15_k2f8f")
theme_override_font_sizes/normal_font_size = 9
bbcode_enabled = true
text = "An incandescent beam of pure brilliance, scorching all deemed unworthy in its path."
fit_content = true
tab_size = 5

[node name="AbilityName" type="Label" parent="Information/Container"]
layout_mode = 0
offset_left = 24.0
offset_top = 25.0
offset_right = 136.0
offset_bottom = 43.0
theme_override_fonts/font = ExtResource("11_tk6ux")
text = "BEAM of no'us"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect" type="ColorRect" parent="."]
show_behind_parent = true
z_index = -1
layout_mode = 0
offset_right = 320.0
offset_bottom = 180.0
mouse_filter = 2
color = Color(0.0901961, 0.0901961, 0.145098, 0.847059)

[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/Light/Laser" to="." method="_on_laser_mouse_entered"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Light/Laser" to="." method="_on_laser_pressed"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/Light/Radiance" to="." method="_on_radiance_mouse_entered"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Light/Radiance" to="." method="_on_radiance_pressed"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/Light/Orb" to="." method="_on_orb_mouse_entered"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Light/Orb" to="." method="_on_orb_pressed"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/Dark/Malady" to="." method="_on_malady_mouse_entered"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Dark/Malady" to="." method="_on_malady_pressed"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/Dark/Assassin" to="." method="_on_assassin_mouse_entered"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Dark/Assassin" to="." method="_on_assassin_pressed"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/Dark/Bomb" to="." method="_on_bomb_mouse_entered"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Dark/Bomb" to="." method="_on_bomb_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Control/Reset" to="." method="_on_reset_pressed"]
